# backend

./: .dockerignore  .gitignore  Dockerfile  README.md  dev-deploy.sh  docker-compose.yml  entrypoint.sh  erd.erd.json  main.py  pyproject.toml  ruff.toml  test_crawl.py  test_graph.py
.agent/rules/: agent.md  backend-code-style.md  persona.md  skills.md
.github/workflows/: deploy.yml
agent/: graph.py  state.py
agent/edges/: route_by_intent.py
agent/model/: llm.py
agent/nodes/: classify_intent.py  generate_answer.py  retrieve_sources.py  save_chat.py
agent/prompts/: chat.py  classify.py
alembic/: env.py
alembic/versions/: 001_add_auth_provider_and_refresh_tokens.py  0d392fb4e4a5_add_notebook_id_to_directory.py  37fc17416145_add_directory_key_table.py  (+1 more)
api/: route.py
core/: auth_guard.py  config.py  security.py
crawl/: client.py  config.py  crawl.py  docker_manager.py  lang_chain_crawl.py  normalizer.py  parser.py  validator.py
crud/: chat.py  directory.py  directory_key.py  extension_sync_key.py  notebook.py  refresh_token.py  source.py  user.py
db/: database.py
models/: __init__.py  chat.py  directory.py  directory_key.py  extension.py  notebook.py  refresh_token.py  source.py  user.py  users.py
schemas/: auth.py  chat.py  content.py  crawl.py  directory.py  extension.py  login.py  notebook.py  response.py  signup.py  source.py
services/: agent.py  auth.py  chat.py  crawl.py  directory.py  directory_key.py  directory_sync.py  extension.py  extension_sync_key.py  google_auth.py  login.py  notebook.py  signup.py  source.py
(+20 files in other folders)
