[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI REST API Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.31.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt<4.1",
    "psycopg2-binary>=2.9.11",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.1",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
