[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI REST API Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.31.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt<4.1",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
    "email-validator>=2.3.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.18.4",
    "langgraph>=1.0.8",
    "langchain-openai>=1.1.9",
    "langchain-community>=0.4.1",
    "beautifulsoup4>=4.14.3",
    "playwright>=1.50.0",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

